@@ -1,3 +1,6 @@
+* enhancements
+  * Do not care about blank passwords on update
+
 == 0.7.2
 
 * deprecation
